# fastapi-strands-hexagonal-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.cursor/rules/: configuration-management.mdc  dependency-injection.mdc  deployment-and-devops.mdc  fastapi-patterns.mdc  hexagonal-architecture.mdc  logging-and-monitoring.mdc  python-coding-standards.mdc  resource-management.mdc  service-layer-patterns.mdc  session-management.mdc  strands-mcp-integration.mdc  testing-and-quality.mdc
.devcontainer/: devcontainer.json
docs/: DEVELOPMENT_GUIDE.md  MCP_USAGE.md
env/: dev.env  local.env
mcp_config/: dev.json  local.json
src/: main.py
src/adapters/primary/: __init__.py  chat_controller.py  ping_controller.py  router.py  session_controller.py
src/adapters/secondary/: strands_agent_manager.py  strands_session_manager.py
src/config/: __init__.py  app.py  dependencies.py  settings.py
src/di/: __init__.py  container.py
src/ports/: agent_manager.py  chat_service.py  message_repository.py  session_manager.py
src/ports/chat/: __init__.py  agent_adapter.py  dto.py  mcp_agent_adapter.py
src/ports/dtos/: __init__.py  chat.py  common.py  requests.py  responses.py  session.py
src/ports/mcp/: __init__.py  config.py
src/services/: __init__.py  chat_service.py  session_service.py
src/utils/: logger.py  mcp.py
tests/: conftest.py  test_chat_controller.py  test_ping_controller.py  test_session_controller.py
tests/service/: test_chat_service.py  test_session_service.py
(+21 files in other folders)
